--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/belleza": "^4.5.11",
+    "@types/lodash": "^4.14.192",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -27,6 +28,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "framer-motion": "^10.0.1",
+    "lodash": "^4.17.21",
     "next": "13.2.1",
     "prettier": "^2.8.4",
     "react": "18.2.0",
